--- a/tensorboard/compat/proto/BUILD
+++ b/tensorboard/compat/proto/BUILD
@@ -30,14 +30,18 @@ tb_proto_library(
         "op_def.proto",
         "resource_handle.proto",
         "rewriter_config.proto",
+        "saved_object_graph.proto",
         "saver.proto",
         "step_stats.proto",
+        "struct.proto",
         "summary.proto",
         "tensor.proto",
         "tensor_description.proto",
         "tensor_shape.proto",
         "tfprof_log.proto",
+        "trackable_object_graph.proto",
         "types.proto",
+        "variable.proto",
         "verifier_config.proto",
         "versions.proto",
     ],
